<?xml version="1.0" encoding="utf-8" ?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:orientation="horizontal"
            android:background="@android:drawable/title_bar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_marginLeft="4.0dip"
                android:layout_marginTop="4.0dip"
                android:layout_marginBottom="4.0dip"
                android:src="@drawable/icon"
                android:contentDescription="@string/account_label" />

            <TextView
                android:textSize="18.0sp"
                android:textStyle="bold"
                android:textColor="@android:color/white"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_marginLeft="8.0dip"
                android:layout_marginTop="4.0dip"
                android:layout_marginBottom="4.0dip"
                android:text="@string/change_pin" />

        </LinearLayout>
	    
        <LinearLayout
            android:orientation="vertical"
            android:background="@android:drawable/screen_background_dark"
            android:paddingTop="10dip"
            android:paddingLeft="4.0dip"
            android:paddingRight="4.0dip"
            android:layout_width="match_parent"
            android:layout_height="0dip"
            android:layout_weight="1.0">
	        
		    <TextView
		        android:textStyle="bold"
		        android:textColor="@color/white"
		        android:layout_width="match_parent"
		        android:layout_height="wrap_content"
                android:layout_marginLeft="4.0dip"
	        	android:layout_marginBottom="5.0dip"
		        android:text="@string/pin_prompt" />
					
			<EditText
			    android:id="@+id/password"
			    android:singleLine="true"
			    android:layout_width="match_parent"
			    android:layout_height="wrap_content"
			    android:inputType="textPassword"
			    android:maxLength="120"
			    android:hint="@string/pin" />
	        
		    <TextView
		        android:textStyle="bold"
		        android:textColor="@color/white"
		        android:layout_width="match_parent"
		        android:layout_height="wrap_content"
	        	android:layout_marginTop="5.0dip"
                android:layout_marginLeft="4.0dip"
	        	android:layout_marginBottom="5.0dip"
		        android:text="@string/new_pin_prompt" />
					
			<EditText
			    android:id="@+id/new_password"
			    android:singleLine="true"
			    android:layout_width="match_parent"
			    android:layout_height="wrap_content"
			    android:inputType="textPassword"
			    android:maxLength="120"
			    android:hint="@string/new_pin" />
			
			<EditText
			    android:id="@+id/reenter_new_password"
			    android:singleLine="true"
			    android:layout_width="match_parent"
			    android:layout_height="wrap_content"
			    android:inputType="textPassword"
			    android:maxLength="120"
			    android:hint="@string/reenter_new_pin" />
			
		</LinearLayout>

        <RelativeLayout
                android:background="@android:drawable/bottom_bar"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

            <TableRow
                android:background="@android:drawable/bottom_bar"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical">

                <Button
                    android:id="@+id/btn_back"
                    android:visibility="invisible"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginLeft="6.0dip"
                    android:layout_marginTop="5.0dip"
                    android:layout_marginRight="8.0dip"
                    android:layout_marginBottom="5.0dip"
                    android:text="@string/btn_back"
                    android:drawableLeft="@drawable/left_arrow"
                    android:layout_weight="1.0"
                    android:layout_gravity="center_vertical|left" />

                <Button
                    android:id="@+id/btn_next"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginLeft="8.0dip"
                    android:layout_marginTop="5.0dip"
                    android:layout_marginRight="6.0dip"
                    android:layout_marginBottom="5.0dip"
                    android:text="@string/btn_change"
                    android:drawableRight="@drawable/right_arrow"
                    android:layout_weight="1.0"
                    android:layout_gravity="center_vertical|right" />

            </TableRow>
        </RelativeLayout>
    </LinearLayout>
</ScrollView>
